PharmaDemo/src/objects/PharmaProduct__c.object
<CustomObject>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <picklist>
            <picklistValues>
                <fullName>Acular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glucotrol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lumigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natrelle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refresh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restasis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zymar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LY_Sales__c</fullName>
        <label>LY Sales</label>
        <summarizedField>Sales__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Sales__c.Year__c</field>
            <operation>equals</operation>
            <value>2008</value>
        </summaryFilterItems>
        <summaryForeignKey>Sales__c.Product__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Details__c</fullName>
        <label>Primary</label>
        <summaryFilterItems>
            <field>Product_Detail__c.Sequence__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>Product_Detail__c.Product__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sales__c</fullName>
        <formula>IMAGE( 
&apos;http://chart.apis.google.com/chart?cht=bhg&amp;chs=200x100&amp;chd=t:&apos; &amp; 
TEXT( LY_Sales__c) &amp; 
&apos;,&apos; &amp; 
TEXT( TY_Sales__c) &amp; 
&apos;&amp;chds=0,&apos; &amp; 
TEXT ( MAX( TY_Sales__c , LY_Sales__c ) ) &amp; &apos;&amp;chxt=y&amp;chxl=0:|This Year|Last Year&amp;chco=702342,82CBDA&amp;chf=bhs,s,efefef20&apos;, &apos;Sales&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Details__c</fullName>
        <label>Secondary</label>
        <summaryFilterItems>
            <field>Product_Detail__c.Sequence__c</field>
            <operation>equals</operation>
            <value>2</value>
        </summaryFilterItems>
        <summaryForeignKey>Product_Detail__c.Product__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TY_Sales__c</fullName>
        <label>TY Sales</label>
        <summarizedField>Sales__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Sales__c.Year__c</field>
            <operation>equals</operation>
            <value>2009</value>
        </summaryFilterItems>
        <summaryForeignKey>Sales__c.Product__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Detail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>